Layout problem solved.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ header{
 .routes li{
     list-style-type: none;
     width: 100%;
+    height: 100%;
 }
 /* .fa-times{
     position: absolute;
